Fix product detail zoom on mobile

--- a/wp-content/themes/sutunam/css/style.css
+++ b/wp-content/themes/sutunam/css/style.css
@@ -6859,10 +6859,13 @@ h6 {
     position: fixed;
     left: 0;
     top: 0;
-    overflow: auto;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    opacity: 0;
+    filter: alpha(opacity=0);
   }
 
-  /* line 951, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
+  /* line 953, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
   .single-product .zoomContainer img {
     width: auto;
@@ -6871,7 +6874,7 @@ h6 {
 }
 
 @media only screen and (max-width: 767px) {
-  /* line 957, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
+  /* line 959, d:/xampp/htdocs/cozaro/wp-content/themes/sutunam/scss/page/_product-detail.scss */
 
   .single-product .zoomContainer img {
     max-width: 767px;
